# moderncpp101

./: .gitignore  LICENSE
exercises/: CMakeLists.txt
exercises/cmake/: main.cpp
exercises/cmake/SharedLibrary/: shared_library.c  shared_library.h
exercises/cmake/StaticLibrary/: static_library.cpp  static_library.h
exercises/compilation/: main.cpp
exercises/counting/: CMakeLists.txt  parser.cpp
exercises/handle/: CMakeLists.txt  handle.cpp  handle_win.cpp
exercises/logs/: CMakeLists.txt  parser.cpp
exercises/loops/: loops.cpp
exercises/unit_testing/: CMakeLists.txt  unit_tests.cpp
samples/: CMakeLists.txt  algorithms_intro.cpp  exceptions.cpp  find_all.cpp  hashtable.cpp  lists.cpp  map.cpp  optional.cpp  predicates.cpp  regex.cpp  solwit.txt  text.cpp  tokenize.cpp  tuples.cpp  vector.cpp
samples/concurrency/: CMakeLists.txt  async.cpp  mutexes.cpp  promises.cpp  threads.cpp
samples/res_mgmt/: CMakeLists.txt  naive.cpp  ptr_container.cpp  smart_ptrs.cpp  with_copy.cpp  with_move.cpp
